<resources>
    <string name="app_name">Will Generator(Mustlist)</string>
    <string name="welcome_first">Are your goals difficult to achieve?</string>
    <string name="welcome_second">Having trouble with lack of motivation and drive?</string>
    <string name="welcome_third">Bet your money on your to-do item, then get reward when you done it</string>
    <string name="welcome_start">Start without sign in</string>
    <string name="double_back_exit">Please click BACK again to exit</string>
    <string name="main_list_add_text">Creating a Will</string>
    <string name="add_title_hint">Please enter your goal</string>
    <string name="add_ok">Preview</string>
    <string name="add_title">Creating a Will</string>
    <string name="preview_name">Goal</string>
    <string name="preview_start_day">Start Day</string>
    <string name="preview_end_day">End Day</string>
    <string name="preview_default_point">Score</string>
    <string name="preview_guide_1">※ You can get a refund for the amount you paid when you reached your must</string>
    <string name="preview_guide_2">※ Please check every day for the set period</string>
    <string name="notice">Notice</string>
    <string name="faq">FAQ</string>
    <string name="main_remain_text">Remain</string>
    <string name="history">History</string>
    <string name="welcome_four">With Mustlist, you can achieve your goal.</string>
    <string name="alert_ok">OK</string>
    <string name="add_start_day">Start day</string>
    <string name="add_deposit">Deposit</string>
    <string name="add_end_day">End Day</string>
    <string name="deposit_0">0.00 $</string>
    <string name="deposit_1">0.99 $</string>
    <string name="deposit_2">4.99 $</string>
    <string name="deposit_3">9.99 $</string>
    <string name="deposit_4">49.99 $</string>
    <string name="deposit_5">99.99 $</string>
    <string name="deposit_6">199.99 $</string>
    <string name="alert_not_connected_network">Not connected to the network</string>
    <string name="alert_add_success">Will was registered.</string>
    <string name="main_list_checked">today checked</string>
    <string name="main_list_not_checked">not yet</string>
    <string name="main_list_status_progress">In progress</string>
    <string name="main_list_status_end">Ended</string>
    <string name="main_list_period">Period</string>
    <string name="alert_set_day">Please select a date range</string>
    <string name="preview_days">Period</string>
    <string name="preview_days_unit">days</string>
    <string name="main_list_status_success">success</string>
    <string name="main_list_status_failure">failure</string>
    <string name="add_datepicker">Click to set</string>
    <string name="main_list_remain_count">Remain Days</string>
    <string name="main_list_check_count">Success Days</string>
    <string name="sign_in_with_google">Sign in</string>
    <string name="google_oauth2_client_id" translatable="false">104189598488-fs49n6pm4mp9jcn7unb9ip7po2kkttca.apps.googleusercontent.com</string>
    <string name="alert_logout">Signed out</string>
    <string name="alert_sign_in_fail">Sign in Failed</string>
    <string name="facebook_app_id" translatable="false">1167052746742043</string>
    <string name="sign_in_progress">Sign in...</string>
    <string name="progress_loading">Loading...</string>
    <string name="alert_not_connect_server">Can not connect to the server. Please try agian later.</string>
    <string name="alert_login_fail">Login Failed</string>
    <string name="facebook_login_protocol_schema" translatable="false">fb1167052746742043</string>
    <string name="alert_already_check">Today already checked</string>
    <string name="main_list_status_scheduled">Scheduled</string>
    <string name="alert_not_today">Today is not the set period</string>
    <string name="logout">Sign out</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="alert_logout_question">Are you sure you want to sign out? If you are logged in as a visitor, data recovery is not possible when you log out.</string>
    <string name="alert_check_success">Good job</string>
    <string name="setting">Settings</string>
    <string name="alert_leave_question">Do you want to leave? No data recovery after unsubscribing</string>
    <string name="setting_feedback">Send feedback to developer</string>
    <string name="side_guest">Welcome Guest</string>
    <string name="preview_guide_3">※ Refunds are available for 80% or more of the selected period.</string>
    <string name="main_list_progress">Progress</string>
    <string name="alert_check_question">Did you do it today?</string>
    <string name="alert_not_initial_billing">In-app Billing was not initiated. Please try again in a few minutes.</string>
    <string name="alert_billing_failed">Payment failed.</string>
    <string name="alert_not_deposit">If you do not pay, you may not be willing.</string>
    <string name="progress_pay">Registering payment data ...</string>
    <string name="welcome_scroll_to_right">Scroll to right</string>
    <string name="alert_account_link_success">Your account link was successful.</string>
    <string name="alert_account_link_failure">Account link failed.</string>
    <string name="add_period_guide">※ The period can be selected up to 30 days from today</string>
    <string name="alert_check_cancel_question">Are you sure you want to cancel?</string>
    <string name="alert_end_failure">Unfortunately, it failed. Please register again to achieve.</string>
    <string name="alert_end_success">Congratulations! Deposit refunds are automatically refunded the day after they are successful.</string>
    <string name="sns_share_title">Share your will</string>
    <string name="alert_sns_share">Do you want to make your friends stronger by informing them?</string>
    <string name="in_app_public_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAt8qugRocMakutggvaHsDgbP+77uWlRx2L2oWRbQx7o3PfcGLA0vnMaUaSTIyCUWODl0dgk3t2lCc4ksPygGIh+liLbEUaHC39KJ9uwjc1WsepY2XSP98W71x9yNMTTQ5EGMephVOgIDISE0GIwcVlPwe06AZ9aHF+sP9TCtj9OojpvgdlZ/8LTUsZvhQA1doKhOaW+poX4neTUpOSzSS/AemRyig+nUm/fSYdtRTfCrlMNQkCJmmh7Tq5e1nq2UqcDVATH/h+YeNtjFuOTQJ6BAegnktKu+VPJEqfdRnkBmiKzlVQO/NuetNMH43FAgxZLdRbe7c/bjj+bad4TlwkQIDAQAB</string>
    <string name="score">Score History</string>
    <string name="score_success">Success score</string>
    <string name="score_created">Created score</string>
    <string name="side_use">Use Score</string>
    <string name="use_not_yet">This feature is coming soon.</string>
    <string name="main_title">Mustlist</string>
    <string name="update_select">A new version is available. Do you want to update?</string>
</resources>
