<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Toolbar">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/setting"/>

    </android.support.v7.widget.Toolbar>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="Link Account"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/setting_sign_in_with_google_button"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/sign_in_with_google"
                android:background="@drawable/btn_google_signin_light_normal"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/setting_sign_in_with_facebook"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </LinearLayout>


        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="Account"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/setting_logout"
            android:background="#00ff0000"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="start|center_vertical"
            android:text="@string/logout"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/setting_leave"
            android:background="#00ff0000"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="start|center_vertical"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/leave"/>


        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:text="Developer"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/setting_feedback"
            android:background="#00ff0000"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="start|center_vertical"
            android:text="@string/setting_feedback" />

    </TableLayout>


</TableLayout>